fix(posts-header): fix width when message loading for scrollbar hack

--- a/src/components/messenger/feed/styles.scss
+++ b/src/components/messenger/feed/styles.scss
@@ -16,6 +16,10 @@
     width: 99.2%;
     border: 1px solid rgba(52, 56, 60);
     padding-right: 2px;
+
+    &--message-loading {
+      width: 100%;
+    }
   }
 
   &__header {
